# Scrat-Backup

./: .flake8  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  ROADMAP.md  TODO.md  build_exe.py  claude.md  debug_usb.sh  debug_wizard.py  dev.sh  install.sh  installer.iss  projekt.md  pyproject.toml  pytest.ini  requirements.txt  run_wizard.py  scrat-backup.desktop  scrat_backup.spec  setup.py  test_layout.py  test_logs_ui.py
.github/ISSUE_TEMPLATE/: blank.yml  bug_report.yml  feature_request.yml  suggestion.yml
.github/workflows/: build-release.yml
assets/icons/: README.md  build_icons.py
config/: default_config.json
docs/: INSTALL.txt  TESTING.md  architecture.md  developer_guide.md  pro_features.md
src/: __init__.py  main.py
src/core/: __init__.py  autostart.py  backup_engine.py  compressor.py  config_manager.py  encryptor.py  metadata_manager.py  platform_scheduler.py  restore_engine.py  scanner.py  scheduler.py  scheduler_worker.py  template_manager.py  update_checker.py
src/gui/: __init__.py  backup_tab.py  dynamic_template_form.py  event_bus.py  logs_tab.py  main_window.py  password_dialog.py  restore_tab.py  schedule_dialog.py  settings_tab.py  system_tray.py  theme.py  theme_manager.py  update_dialog.py  wizard.py  wizard_pages.py  wizard_prototype.py  wizard_v2.py
src/models/: __init__.py
src/storage/: __init__.py  base.py  rclone_storage.py  sftp_storage.py  smb_storage.py  usb_storage.py  webdav_storage.py
src/templates/: __init__.py  dropbox.json  google_drive.json  nextcloud.json  onedrive.json  qnap.json  synology.json  usb.json
src/templates/handlers/: __init__.py  base.py  dropbox_handler.py  google_drive_handler.py  nextcloud_handler.py  onedrive_handler.py  qnap_handler.py  synology_handler.py  usb_handler.py
src/utils/: __init__.py  credential_manager.py  notifications.py  paths.py  performance_logger.py  validators.py
templates/: dropbox.json  google_drive.json  nextcloud.json  onedrive.json  qnap.json  synology.json  usb.json
tests/: __init__.py  test_backup_engine.py  test_backup_tab.py  test_compressor.py  test_config_manager.py  test_gui.py  test_rclone_storage.py  test_restore_tab.py  test_scanner.py  test_settings_tab.py  test_smb_storage.py  test_usb_storage.py  test_webdav_storage.py
tests/core/: test_scheduler.py  test_scheduler_worker.py
tests/unit/: test_compressor.py  test_encryptor.py  test_metadata_manager.py
