[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrat-backup"
version = "0.1.0"
description = "Benutzerfreundliches Backup-Tool für Windows mit Verschlüsselung"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPLv3"}
authors = [
    {name = "Scrat-Backup Contributors"}
]
keywords = ["backup", "encryption", "windows", "aes-256", "privacy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Verzeichnisse
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

# Externe Bibliotheken ohne vollständige Type-Stubs
[[tool.mypy.overrides]]
module = ["paramiko", "paramiko.*", "requests", "requests.*", "webdavclient3", "webdavclient3.*"]
ignore_errors = true

# Windows-spezifische Module – auf Linux nicht prüfbar
[[tool.mypy.overrides]]
module = ["winreg"]
ignore_errors = true

# TODO: Gradual Typing – diese Module noch nicht vollständig getypt.
# Neue Module werden bitte gleich mit Typ-Annotationen versehen.
[[tool.mypy.overrides]]
module = [
    "src.core.metadata_manager",
    "src.core.autostart",
    "src.core.restore_engine",
    "src.core.config_manager",
    "src.core.platform_scheduler",
    "src.core.scheduler_worker",
    "src.gui.wizard",
    "src.gui.wizard_pages",
    "src.gui.wizard_v2",
    "src.gui.restore_tab",
    "src.gui.logs_tab",
    "src.gui.dynamic_template_form",
    "src.gui.settings_tab",
    "src.gui.main_window",
    "src.gui.schedule_dialog",
    "src.gui.password_dialog",
    "src.gui.event_bus",
    "src.gui.theme",
    "src.storage.sftp_storage",
    "src.storage.smb_storage",
    "src.storage.webdav_storage",
    "src.templates.handlers.usb_handler",
    "src.templates.handlers.synology_handler",
    "src.templates.handlers.qnap_handler",
    "src.templates.handlers.nextcloud_handler",
    "src.utils.performance_logger",
    "src.utils.credential_manager",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit-Tests (schnell, isoliert)",
    "integration: Integration-Tests (langsamer, externe Ressourcen)",
    "gui: GUI-Tests (benötigt Display)",
    "slow: Langsame Tests (>1 Sekunde)",
    "windows: Nur unter Windows",
    "linux: Nur unter Linux",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
